<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:checked="true"
            android:icon="@drawable/ic_baseline_dashboard_24"
            android:title="@string/main" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_baseline_favorite_border_24"
            android:title="@string/saq" />
        <item
            android:id="@+id/nav_other"
            android:icon="@drawable/ic_baseline_apps_24"
            android:onClick="navOthers"
            android:title="@string/other" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_baseline_thumb_up_24"
            android:onClick="navRate"
            android:title="@string/rate" />
    </group>

    <item android:title="@string/com">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_telegram"
                    android:onClick="navTelegram"
                    android:icon="@drawable/img_tel"
                    android:title="@string/telegram" />
                <item
                    android:id="@+id/nav_channel"
                    android:onClick="navChannel"
                    android:icon="@drawable/img_tel"
                    android:title="@string/koi" />
                <item
                    android:id="@+id/nav_share"
                    android:onClick="navShare"
                    android:icon="@drawable/ic_baseline_share_24"
                    android:title="@string/share" />
            </group>
        </menu>
    </item>
</menu>